# caliper

./: .env.example  .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
docs/: 01-initial-implementation-plan.md  02-self-audit.md  03-revised-plan-round-1.md  04-industry-standards-research.md  05-revised-plan-round-2.md  06-final-implementation-plan.md  07-implementation-log.md  08-post-implementation-audit.md  09-fix-audit-findings.md  anomaly-actionability-audit.md  anomaly-actionability-implementation.md  anomaly-actionability-post-implementation-audit.md  attribution-semantics.md  caliper-flag-vocabulary.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/docs/: concepts.mdx  index.mdx  quickstart.mdx
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/ccusage-codex-parity/: 01-initial-implementation-plan.md  02-self-audit.md  03-revised-plan-round-1.md  04-industry-standards-research.md  05-revised-plan-round-2.md  06-final-implementation-plan.md  07-implementation-log.md  08-post-implementation-audit.md  09-fix-audit-findings.md
docs/holistic-core-cleanup/: 01-initial-implementation-plan.md  02-self-audit.md  03-revised-plan-round-1.md  04-industry-standards-research.md  05-revised-plan-round-2.md  06-final-implementation-plan.md  08-post-implementation-audit.md  09-audit-finding-resolution.md
docs/launch/: README.md  faq-objections.md  hn-show.md  linkedin-launch.md  tweet-launch.md
docs/messaging/: PITCH.md
docs/migrations/: 1.0.0.md  README.md
docs/persona-overhaul/: 01-plan.md
docs/project-granularity/: 01-initial-implementation-plan.md  02-self-audit.md  03-revised-plan-round-1.md  04-industry-standards-research.md  05-revised-plan-round-2.md  06-final-implementation-plan.md  07-implementation-log.md  08-post-implementation-audit.md  09-fix-audit-findings.md
docs/qa/: live-release-qa-0.0.21-brutal-feedback.md  live-release-qa-0.0.21-remediation.md  live-release-qa-0.0.22-brutal-feedback.md  live-release-qa-0.0.22-remediation.md  live-release-qa-0.0.23-brutal-feedback.md  live-release-qa-0.0.23-remediation.md  live-release-qa-0.0.24-final-pass.md  live-release-qa-0.0.25-brutal-feedback.md  live-release-qa-0.0.25-final-pass.md  live-release-qa-0.0.25-remediation.md  live-release-qa-0.0.26-brutal-feedback.md  live-release-qa-0.0.26-remediation.md  live-release-qa-0.0.27-brutal-feedback.md  live-release-qa-0.0.27-remediation.md  live-release-qa-0.0.28-brutal-feedback.md  live-release-qa-0.0.28-remediation.md
docs/release-and-ux-overhaul/: 01-plan.md  RUNBOOK-publish.md
docs/textual-tui/: 01-initial-implementation-plan.md  02-self-audit.md  03-plan-revision-r1.md  04-industry-research.md  05-plan-revision-r2.md  06-final-plan.md  08-post-audit.md
editor/vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
editor/vscode/src/: extension.ts
schemas/: model-taxonomy.schema.json  rates.schema.json  tier-overrides.schema.json
scripts/: live-release-smoke.sh  publish.sh  release-smoke.sh
src/caliper/: __init__.py  __main__.py  aggregation.py  anomaly.py  arbitrage.py  arbitrage_rules.py  attribution.py  blocks.py  budgets.py  cli.py  cli_progress.py  config.py  dedupe.py  efficiency.py  evidence.py  exporters.py  forecasts.py  git.py  health.py  html_export.py  humanize.py  inefficiencies.py  insights.py  intervals.py  live.py  models.py  network.py  normalize.py  output.py  parse_cache.py  parse_parallel.py  parser.py  patterns.py  persona.py  predict.py  pricing.py  pricing_catalog.py  progress.py  prom_export.py  prom_snapshot.py  (+10 more)
src/caliper/analysis/: __init__.py  session_shape.py
src/caliper/dashboards/: __init__.py  adapter.py  data_models.py  html.py  sample_data.py  styles.css
src/caliper/tui/: __init__.py  app.py  demo.py  formatting.py  manifest.py  messages.py  palette.py  progress.py  state.py  workers.py
src/caliper/tui/screens/: __init__.py  _base.py  budgets.py  doctor.py  forecast.py  help.py  home.py  insights.py  intervals.py  limits.py  live.py  models.py  projects.py  receipt.py  sessions.py  stub.py  welcome.py  (+1 more)
src/caliper/vendors/: __init__.py  aider.py  claude_code.py  codex.py
src/codex_meter/: __init__.py  __main__.py  aggregation.py  budgets.py  cli.py  config.py  exporters.py  health.py  humanize.py  insights.py  intervals.py  live.py  models.py  output.py  parse_cache.py  parser.py  pricing.py  prom_export.py  prom_snapshot.py  rate_audit.py  render.py  scenarios.py  statusline.py  subscriptions.py  timeutil.py  windows.py
tests/: conftest.py  test_aggregation.py  test_analytics_cli.py  test_anomaly.py  test_anomaly_equivalence.py  test_arbitrage.py  test_attribution.py  test_attribution_policy.py  test_billing_semantics.py  test_blocks.py  test_budgets.py  test_cache_pricing.py  test_claude_code_tool_use.py  test_claude_window_prefilter.py  test_cli.py  test_cli_analytics.py  test_cli_dashboard.py  test_cli_helpers.py  test_cli_html_format.py  test_cli_robustness.py  test_cli_smoke.py  test_cli_surface_contracts.py  test_commands.py  test_compat_imports.py  test_config.py  test_dashboard_defaults.py  test_dashboard_edge_cases.py  test_dashboard_html.py  test_dashboard_phase1_power_ups.py  test_dashboard_phase2_forecast.py  test_dashboard_phase3_efficiency.py  test_dashboard_phase4_cohort.py  test_dashboard_responsive_layout.py  test_dashboard_sample_data.py  test_dedupe.py  test_deeper_analysis.py  test_docs_drift.py  test_efficiency.py  test_evidence.py  test_exit_codes.py  (+52 more)
tests/fixtures/claude_code/: example.jsonl  expected.json
tests/tui/: test_app_refresh.py  test_caliper_screen_layout.py  test_demo_mode.py  test_home_snapshot.py  test_launch_hardening.py  test_navigation.py  test_numeric_formatting.py  test_projects_screen.py  test_screens_smoke.py  test_tui_imports.py  test_tui_workers_cancel.py
(+15 files in other folders)
