[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "caliper-ai"
version = "0.4.0"
description = "Measure every line of AI-written code. Offline-first usage, cost, and ROI intelligence for AI coding tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Rajdeep Mondal" }
]
keywords = [
  "ai",
  "codex",
  "claude-code",
  "cursor",
  "copilot",
  "usage",
  "tokens",
  "cli",
  "credits",
  "cost",
  "observability",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12"
]

[project.optional-dependencies]
prom = ["prometheus-client>=0.20"]

[project.urls]
Homepage = "https://github.com/rajdeepmondaldotcom/caliper"
Repository = "https://github.com/rajdeepmondaldotcom/caliper"
Issues = "https://github.com/rajdeepmondaldotcom/caliper/issues"
Changelog = "https://github.com/rajdeepmondaldotcom/caliper/blob/main/CHANGELOG.md"

[project.scripts]
caliper = "caliper.cli:app"
codex-meter = "caliper.cli:app"

[dependency-groups]
dev = [
  "build>=1.2",
  "prometheus-client>=0.20",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "typer>=0.12"
]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/schemas",
  "/src/caliper",
]

[tool.hatch.build.targets.wheel]
packages = ["src/caliper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/caliper"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pragma: no cover",
]
show_missing = true
