[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "caliper-ai"
version = "0.0.36"
description = "Local cost ledger for AI-assisted development. Opens a private dashboard and per-PR cost reports from Codex, Claude Code, Cursor, and Aider logs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Rajdeep Mondal" }
]
keywords = [
  "ai",
  "ai-coding",
  "codex",
  "claude-code",
  "cursor",
  "aider",
  "usage",
  "tokens",
  "cli",
  "cost",
  "budget",
  "ai-costs",
  "finops",
  "pull-request",
  "offline",
  "local-first",
  "observability",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "platformdirs>=4.3",
  "rich>=14.2.0",
  "textual>=8.2,<9",
  "typer>=0.12",
  "watchdog>=4.0,<7"
]

[project.optional-dependencies]
prom = ["prometheus-client>=0.20"]

[project.urls]
Homepage = "https://github.com/rajdeepmondaldotcom/caliper"
Documentation = "https://github.com/rajdeepmondaldotcom/caliper#readme"
Repository = "https://github.com/rajdeepmondaldotcom/caliper"
Issues = "https://github.com/rajdeepmondaldotcom/caliper/issues"
Changelog = "https://github.com/rajdeepmondaldotcom/caliper/blob/main/CHANGELOG.md"

[project.scripts]
caliper = "caliper.cli:app"

[dependency-groups]
dev = [
  "build>=1.2",
  "hypothesis>=6.135",
  "prometheus-client>=0.20",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-textual-snapshot>=1.0",
  "ruff>=0.6",
  "textual>=8.2,<9",
  "typer>=0.12"
]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/schemas",
  "/src/caliper",
]

[tool.hatch.build.targets.wheel]
packages = ["src/caliper"]
artifacts = [
  "src/caliper/tui/tcss/*.tcss",
  "src/caliper/tui/tcss/themes/*.tcss",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

# The dashboard renderer is a designer handoff (`HANDOFF.md`) — kept
# verbatim apart from the CSS inlining recipe. SVG path strings and
# CSS-in-Python lines exceed our 100-char limit by design.
[tool.ruff.lint.per-file-ignores]
"src/caliper/dashboards/html.py" = ["E501", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/caliper"]
branch = true

[tool.coverage.report]
# Keep the gate close to observed total coverage; lift to 90 once
# remaining TUI worker and command-palette branches are covered.
fail_under = 88
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pragma: no cover",
]
show_missing = true
